tests/rgs/syntax_errors/during_no_when_blocks.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING ALWAYS:
DURING ALWAYS:
    WHEN spotted ENVIRONMENT:
        DO run.
